* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-04-13.
+2004-04-14.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -40,6 +40,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.Polygon</td> <td class="needsmerge"><a href="compare/java.awt.Polygon.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.event.MouseEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.MouseEvent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">java.awt.image.PixelInterleavedSampleModel</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.Raster</td> <td class="needsmerge"><a href="compare/java.awt.image.Raster.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.SampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.SampleModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.SinglePixelPackedSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.SinglePixelPackedSampleModel.diff">Diff</a></td> </tr>
@@ -232,8 +233,19 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.ImageReader</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.ImageTranscoder</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.ImageWriter</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.IIOServiceProvider</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ImageInputStreamSpi</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ImageOutputStreamSpi</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ImageReaderWriterSpi</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ImageTranscoderSpi</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.spi.RegisterableService</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.spi.ServiceRegistry</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.stream.IIOByteBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.stream.ImageInputStream</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.stream.ImageOutputStream</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">javax.naming.directory.SearchControls</td> <td class="needsmerge"><a href="compare/javax.naming.directory.SearchControls.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.naming.spi.DirStateFactory</td> <td class="needsmerge"><a href="compare/javax.naming.spi.DirStateFactory.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.rmi.BAD_OPERATION</td> <td>No</td> </tr>
