* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-04-14.
+2004-04-15.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,6 +19,7 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.Buffers</td> <td class="needsmerge"><a href="compare/gnu.java.awt.Buffers.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFontPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFontPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainDatagramSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
@@ -39,6 +40,9 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.Graphics</td> <td class="needsmerge"><a href="compare/java.awt.Graphics.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Polygon</td> <td class="needsmerge"><a href="compare/java.awt.Polygon.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.event.MouseEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.MouseEvent.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">java.awt.image.DataBufferDouble</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">java.awt.image.DataBufferFloat</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">java.awt.image.DataBufferShort</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.awt.image.PixelInterleavedSampleModel</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.Raster</td> <td class="needsmerge"><a href="compare/java.awt.image.Raster.diff">Diff</a></td> </tr>
