--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -21,7 +21,7 @@ of the code that GCC generates for IA-64, more properly known as IPF
 (Itanium Processor Family).
 The lists originally came out
 of the GCC IA-64 Summit that was held June 6, 2001
-(<a href="http://linuxia64.org/gcc_summit.2001.06.06.html">minutes
+(<a href="http://www.ia64-linux.org/compilers/gcc_summit.html">minutes
 of the summit</a>), and many of the comments are from that summit.
 Later updates are from discussions among people working in this area.
 Additions and corrections are always welcome.</p>
