* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-04-15.
+2004-04-16.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -40,6 +40,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.Graphics</td> <td class="needsmerge"><a href="compare/java.awt.Graphics.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Polygon</td> <td class="needsmerge"><a href="compare/java.awt.Polygon.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.event.MouseEvent</td> <td class="needsmerge"><a href="compare/java.awt.event.MouseEvent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ComponentColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ComponentColorModel.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.awt.image.DataBufferDouble</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.awt.image.DataBufferFloat</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.awt.image.DataBufferShort</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -256,6 +257,8 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
 <tr> <td class="needsmerge">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
 <tr> <td class="needsmerge">javax.rmi.ORB</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.swing.JDialog</td> <td class="needsmerge"><a href="compare/javax.swing.JDialog.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
