Fix GCC 3.4.0 status. Originally by Andrew Pinski <pinskia@physics.uc.edu>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,15 +44,15 @@ to maintain and improve quality.</p>
   will become <a href="gcc-3.4/index.html">GCC 3.4.0</a>
 </dt><dd>
   Branch status:
-     <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00725.html">2004-03-21</a>
-  (open for bug fixes for regressions only).
+  <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00725.html">2004-04-12</a>
+  (all patches require release manager approval).
 </dd>
 
 <dt><strong>Current release series:</strong>
   <a href="gcc-3.3/">GCC 3.3.3</a> (released 2004-02-14)
 </dt><dd>
   Branch status:
-     <a href="http://gcc.gnu.org/ml/gcc/2004-03/msg01609.html">2004-03-27</a>
+  <a href="http://gcc.gnu.org/ml/gcc/2004-03/msg01609.html">2004-03-27</a>
   (open for all bugfixes).
 </dd>
 
