--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -775,19 +775,12 @@ a PDF file with a link from
 <a href="http://developer.intel.com/design/PentiumIII/manuals/">
 http://developer.intel.com/design/PentiumIII/manuals/</a>.</p>
 
-<p><a name="ref_7">[7]</a>
-<em>Intel Itanium[tm] Architecture Software Developer's Manual Vol. 1
-rev. 1.1: Application Architecture</em>;
-a 2.0 Mbyte PDF file with a link from
-<a href="http://developer.intel.com/design/itanium/manuals/index.htm">
-http://developer.intel.com/design/itanium/manuals/index.htm</a>.</p>
-
 <p><a name="ref_8">[8]</a>
 <em>Intel Itanium[tm] Architecture Software Developer's Manual Vol. 3
-rev. 1.1: Instruction Set Reference</em>;
-an 8.0 Mbyte PDF file with a link from
-<a href="http://developer.intel.com/design/itanium/manuals/index.htm">
-http://developer.intel.com/design/itanium/manuals/index.htm</a>.</p>
+rev. 2.1: Instruction Set Reference</em>;
+an 10 Mbyte PDF file with a link from
+<a href="http://www.intel.com/design/itanium/manuals/iiasdmanual.htm">
+http://www.intel.com/design/itanium/manuals/iiasdmanual.htm</a>.</p>
 
 <p><a name="ref_9">[9]</a>
 <em>MIPS32[tm] Architecture for Programmers; Volume II: The MIPS32[tm]
