Avoid adressing the main tree-ssa page via different vectors, once via the directory, and once via index.html.

--- a/htdocs/projects/tree-ssa/vectorization.html
+++ b/htdocs/projects/tree-ssa/vectorization.html
@@ -13,7 +13,7 @@
 
     <p>This document outlines a high level plan for the
     implementation of auto-vectorization in the <a href=
-    "index.html">tree-ssa branch</a> of GCC. The main goals of this
+    "./">tree-ssa branch</a> of GCC. The main goals of this
     document are to:</p>
 
     <ul>
