--- a/htdocs/projects/tree-ssa/lno.html
+++ b/htdocs/projects/tree-ssa/lno.html
@@ -8,7 +8,7 @@
 
 <p>This project aims at implementing a loop nest optimizer at the tree
 level.  The <code>lno-branch</code> is based on the 
-<a href="index.html">tree-ssa-20020619-branch</a>.</p>
+<a href="./">tree-ssa-20020619-branch</a>.</p>
 
 <h2>Passes in the branch</h2>
 <dl>
