Fix link to texinfo manual.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -349,8 +349,8 @@ feature is obsolete and should not be used.  All manuals should use
 directory information for <code>install-info</code>.</p>
 
 <p>It is useful to read the <a
-href="http://www.gnu.org/manual/texinfo/">Texinfo manual</a>.  Some
-general Texinfo style issues discussed in that manual should be
+href="http://www.gnu.org/software/texinfo/manual/texinfo/">Texinfo manual</a>.
+Some general Texinfo style issues discussed in that manual should be
 noted:</p>
 
 <ul>
