Avoid broken link to Boost download page.

--- a/htdocs/testing/testing-boost.html
+++ b/htdocs/testing/testing-boost.html
@@ -14,7 +14,7 @@ GCC integration testing.</p>
 <h2>Resource usage</h2>
 
 <p>Boost distributions are available from SourceForge, linked from the
-<a href="http://www.boost.org/more/download.html">Boost download page</a>.
+<a href="http://www.boost.org/">Boost web site</a>.
 These instructions are for version 1.27.0, whose gzipped tar file is
 3.8 MB.  The uncompressed distribution comprises some 16 MB of source files.
 Building the library and tests adds between 80 and 140 MB of
