Fix POOMA homepage URL.  Minor tweaks and adjustment to coding conventions.

--- a/htdocs/testing/testing-pooma.html
+++ b/htdocs/testing/testing-pooma.html
@@ -8,7 +8,7 @@
 <h1>POOMA build and test guide</h1>
 
 <p>This page is a guide to building the
-<a href="http://www.codesourcery.com/pooma/pooma">POOMA</a>
+<a href="http://www.codesourcery.com/pooma/">POOMA</a>
 parallel object-oriented code and running its test programs.</p>
 
 <h2>Download and Extract</h2>
@@ -37,8 +37,8 @@ programs, and run the examples, use:</p>
     when <code>uname</code> matches:
     <ul>
     <li>linux</li>
-    <li>irix64 - 64 bit Irix 6.x platforms</li>
-    <li>sunos - Sun Solaris</li>
+    <li>irix64: 64-bit Irix 6.x platforms</li>
+    <li>sunos: Sun Solaris</li>
     </ul>
 </li>
 <li>For other architectures it is necessary to:
