gcj-abi-2-dev-branch added.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -280,6 +280,18 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>This is a temporary branch for development of java GUI libraries
   (AWT and Swing) in the libjava directory.</dd>
 
+  <dt>gcj-abi-2-dev-branch</dt>
+  <dd>This is a branch for experimental work for the gcj Binary
+  Compatible ABI, aka gcj ABI 2.  As of the time of writing we don't
+  have a stable design for this new ABI, but we are doing some
+  experiments to see what works, and this branch is what we use.  Once
+  the design of the gcj ABI 2 is fleshed out and the code is stable
+  this branch will die.  Ask on the gcj list 
+  &lt;<a  href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a>&gt; before starting
+  any work on this branch.  This branch is
+  maintained by Andrew Haley.  Patches should be marked with the
+  tag <code>[BC ABI]</code> in the subject line.</dd>
+
 </dl>
 
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
