--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -31,6 +31,7 @@ sites</a>.</p>
 <li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/gnu/gcc/">ftp.fu-berlin.de</a>, thanks to Felix von Leitner (leitner at math dot fu-berlin dot de)</li>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/misc/gcc/">ftp.gwdg.de</a>, thanks to emoenke at gwdg dot de</li>
 <li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a>, thanks to ftpadmin at mpi-sb.mpg dot de</li>
+<li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/gcc/">ftp.ntua.gr</a>, thanks to ftpadm at ntua dot gr</li>
 <li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/gcc/">ftp.dti.ad.jp</a>, thanks to IWAIZAKO Takahiro (ftp-admin at dti dot ad dot jp)</li>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/gcc/">ftp.eos.hokudai.ac.jp</a>, thanks to ftp-admin at eos dot hokudai dot ac dot jp</li>
 <li>Japan: <a href="ftp://ftp.iij.ad.jp/pub/gcc/">ftp.iij.ad.jp</a>, thanks to ftp at ftp dot iij dot ad dot jp</li>
