--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -116,6 +116,7 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <ul>
   <li>gcc_ss_<i>yyyymmdd</i></li>
+  <li>gcc_3_4_0_release</li>
   <li>gcc-3_4-branch</li>
   <li>gcc_3_3_3_release</li>
   <li>gcc_3_3_1_release</li>
