--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -11,6 +11,9 @@
 <body>
 <h1>GCC 3.4 Release Series<br />Changes, New Features, and Fixes</h1>
 
+<p>The latest release in the 3.4 release series is
+<a href="#3.4.0">GCC 3.4.0</a>.</p>
+
 <h2>Caveats</h2>
 
   <ul>
@@ -1117,5 +1120,22 @@
         for non-optimizing compilations.</li>
   </ul>
 
+<hr />
+<h2><a name="3.4.0">GCC 3.4.0</a></h2>
+<p>
+Detailed release notes for the GCC 3.4.0 release follow.
+</p>
+
+<h3>Bug Fixes</h3>
+
+<p>
+A vast number of bugs have been fixed in 3.4.0, too many to publish a
+complete list here.
+<a
+href="http://gcc.gnu.org/bugzilla/buglist.cgi?short_desc_type=notregexp&amp;short_desc=%5C%5B3%5C.4.*%5BRr%5Degression&amp;target_milestone=3.4.0&amp;bug_status=RESOLVED&amp;resolution=FIXED">Follow
+this link</a> to query the Bugzilla database for the list of over 900 bugs
+fixed in 3.4.0.  This is the list of all bugs marked as resolved and fixed
+in 3.4.0 that are not flagged as 3.4 regressions.
+</p>
 </body>
 </html>
