Bootstrap and test results for 3.4.0:
  alphaev6-dec-osf5.1
  hppa2.0w-hp-hpux11.00
  i686-pc-linux-gnu (Fedora Core 1, binutils 2.14.90.0.6, glibc 2.3.2,
     kernel 2.4.22)
  i686-pc-linux-gnu (Gentoo, glibc 2.3.3, kernel 2.6.6)
  i686-pc-linux-gnu (Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7)
  sparc-sun-solaris2.8 (GNU as and ld 2.13.1)
  x86_64-unknown-linux-gnu (Red Hat EL 3, binutils 2.14.90.0.4, glibc 2.3.2,
    kernel 2.4.21)

Bootstrap for 3.4.0:

  powerpc-apple-darwin7.3.0 (Mac OS X 10.3.1)

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -20,5 +20,87 @@ including a list of information to include in such a report, are part of
 <a href="http://gcc.gnu.org/install/finalinstall.html">
 Installing GCC: Final Installation</a>.</p>
 
+<table>
+
+<tr>
+<td>alphaev6-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01061.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01065.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>binutils 2.13.1</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00961.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Fedora Core 1, binutils 2.14.90.0.6, glibc 2.3.2, kernel 2.4.22</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="ttp://gcc.gnu.org/ml/gcc/2004-04/msg00977.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00999.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Gentoo, glibc 2.3.3, kernel 2.6.6</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00952.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00966.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00960.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin7.3.0</td>
+<td>Mac OS X 10.3.1</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00966.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>GNU as and ld 2.13.1</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00978.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-linux-gnu</td>
+<td>Red Hat EL 3, binutils 2.14.90.0.4, glibc 2.3.2, kernel 2.4.21</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01028.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01029.html">3.4.0</a>
+</td>
+</tr>
+
+</table>
+
 </body>
 </html>
