* news.html (Cryptix): Remove broken link to Cryptix site.

--- a/htdocs/java/news.html
+++ b/htdocs/java/news.html
@@ -477,9 +477,7 @@ support for most JDK 1.1 language features, such as inner classes.
 Warren Levy checked in the basics of the <code>java.security.*</code> packages
 that he and Tom Tromey have been putting together.  It is just the basics
 of <code>java.security</code> and some of it is indeed stubbed.  It has been
-tried with the 20000120 snapshot of 
-<a href="http://www.cryptix.org/products/jce/">Cryptix JCE</a>
-so it is usable.
+tried with the 20000120 snapshot of Cryptix JCE, so it is usable.
 
 Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
 things included.
