Test results for 3.4.0:
  hppa2.0w-hp-hpux11.00
  i586-redhat-linux-gnu
  i686-pc-cygwin
  i686-pc-linux-gnu
  ia64-unknown-linux-gnu
  mips-sgi-irix6.5
  s390-ibm-linux-gnu
  s390x-ibm-linux-gnu
  sparc-sun-solaris2.5.1
  sparc-sun-solaris2.6
  sparc-sun-solaris2.7
  sparc-sun-solaris2.8
  sparc64-sun-solaris2.9

Fix a couple of bad links.

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -38,7 +38,37 @@ Installing GCC: Final Installation</a>.</p>
 <td>Bootstrap (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01033.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00961.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-redhat-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01010.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00996.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01063.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01041.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01037.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01017.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01004.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00990.html">3.4.0</a>
 </td>
 </tr>
 
@@ -46,7 +76,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Fedora Core 1, binutils 2.14.90.0.6, glibc 2.3.2, kernel 2.4.22</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
-<a href="ttp://gcc.gnu.org/ml/gcc/2004-04/msg00977.html">3.4.0</a>
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00977.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00999.html">3.4.0</a>
 </td>
@@ -58,7 +88,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00952.html">3.4.0</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00966.html">3.4.0</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00966.html">3.4.0</a>
 </td>
 </tr>
 
@@ -73,10 +103,75 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00974.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01057.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00964.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-apple-darwin7.3.0</td>
 <td>Mac OS X 10.3.1</td>
 <td>Bootstrap (C, C++, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00966.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01034.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>s390x-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01035.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.5.1</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00980.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00982.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00981.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00983.html">3.4.0</a>
 </td>
 </tr>
 
@@ -87,6 +182,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00978.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00984.html">3.4.0</a>
 </td>
 </tr>
 
