--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -491,6 +491,14 @@ NOTE: the submitter reported that thread support is broken and asked
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 9.0, glibc 2.2.5, kernel 2.6.5</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00829.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 9.1, glibc 2.3.1, kernel 2.4.21</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg00271.html">3.3</a>
