Bootstrap and test results for 3.4.0:
  i386-unknown-netbsdelf1.6.2 (NetBSD 1.6.2, GNU ld 2.11.2)

Bootstrap for 3.4.0:

  i386-unknown-netbsdelf2.0D

Test results for 3.4.0:

  powerpc64-unknown-linux-gnu
  sparc64-sun-solaris2.9

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -44,6 +44,24 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-netbsdelf1.6.2</td>
+<td>NetBSD 1.6.2, GNU ld 2.11.2</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01144.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01102.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-unknown-netbsdelf2.0D</td>
+<td>NetBSD 2.0D</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C, Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01157.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>i586-redhat-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -128,6 +146,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01137.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>s390-ibm-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -189,6 +215,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc64-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01095.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00984.html">3.4.0</a>
 </td>
 </tr>
