The selected_real_kind and selected_int_kind intrinsics have been implemented for some time.

--- a/htdocs/fortran/librarystatus.html
+++ b/htdocs/fortran/librarystatus.html
@@ -140,8 +140,8 @@ code for these in the library.</p>
 <tr><td>RRSPACING</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>SCALE</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>SCAN</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
-<tr><td>SELECTED_INT_KIND</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
-<tr><td>SELECTED_REAL_KIND</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
+<tr><td>SELECTED_INT_KIND</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
+<tr><td>SELECTED_REAL_KIND</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>SET_EXPONENT</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>SHAPE</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>SIGN</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
