--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -24,11 +24,21 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>alphaev6-dec-osf5.1</td>
-<td>&nbsp;</td>
+<td>Tru64</td>
 <td>Bootstrap (C, C++, F77):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01061.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01065.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>alphaev6-dec-osf5.1</td>
+<td>Tru64</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C, with patch):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01167.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01154.html">3.4.0</a>
 </td>
 </tr>
 
@@ -81,6 +91,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01247.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01215.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01214.html">3.4.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01213.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01063.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01041.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01037.html">3.4.0</a>,
@@ -142,6 +156,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mac OS X 10.3.1</td>
 <td>Bootstrap (C, C++, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00966.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>binutils 2.15.90.0.1, glibc 2.3.2, kernel 2.6.3</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C, Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01173.html">3.4.0</a>
 </td>
 </tr>
 
@@ -212,12 +234,38 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01240.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc64-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01095.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00984.html">3.4.0</a>
 </td>
+</tr>
+
+<tr>
+<td>sparc-unknown-linux-gnu</td>
+<td>Aurora SPARC Linux 1.0, binutils 2.15.90, glibc 2.2.5, kernel 2.4.26</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01171.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01168.html">3.4.0</a>
+</tr>
+
+<tr>
+<td>sparc64-unknown-linux-gnu</td>
+<td>Aurora SPARC Linux 1.0, binutils 2.15.90, glibc 2.2.5, kernel 2.4.26</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01171.html">3.4.0</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01167.html">3.4.0</a>
 </tr>
 
 <tr>
