--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-04-28.
+2004-04-29.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -40,9 +40,13 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.security.der.DERReader</td> <td class="needsmerge"><a href="compare/gnu.java.security.der.DERReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.security.der.DERWriter</td> <td class="needsmerge"><a href="compare/gnu.java.security.der.DERWriter.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.security.provider.DSAKeyPairGenerator</td> <td class="needsmerge"><a href="compare/gnu.java.security.provider.DSAKeyPairGenerator.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">gnu.java.text.AttributedFormatBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.text.CharacterBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.CharacterBreakIterator.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">gnu.java.text.FormatBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">gnu.java.text.FormatCharacterIterator</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.text.LineBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.LineBreakIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.text.SentenceBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.SentenceBreakIterator.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">gnu.java.text.StringFormatBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.text.WordBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.WordBreakIterator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.util.DoubleEnumeration</td> <td class="needsmerge"><a href="compare/gnu.java.util.DoubleEnumeration.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.util.prefs.NodeReader</td> <td class="needsmerge"><a href="compare/gnu.java.util.prefs.NodeReader.diff">Diff</a></td> </tr>
@@ -54,6 +58,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.image.ColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ColorModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.ComponentSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ComponentSampleModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.BufferedReader</td> <td class="needsmerge"><a href="compare/java.io.BufferedReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.FilePermission</td> <td class="needsmerge"><a href="compare/java.io.FilePermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
@@ -112,8 +117,11 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.DecimalFormat</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.DecimalFormatSymbols</td> <td class="needsmerge"><a href="compare/java.text.DecimalFormatSymbols.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Format</td> <td class="needsmerge"><a href="compare/java.text.Format.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.text.FormatCharacterIterator</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">java.text.MessageFormat</td> <td class="needsmerge"><a href="compare/java.text.MessageFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.NumberFormat</td> <td class="needsmerge"><a href="compare/java.text.NumberFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.text.SimpleDateFormat</td> <td class="needsmerge"><a href="compare/java.text.SimpleDateFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Arrays</td> <td class="needsmerge"><a href="compare/java.util.Arrays.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Date</td> <td class="needsmerge"><a href="compare/java.util.Date.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
@@ -141,6 +149,7 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOWriteWarningListener</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.imageio.stream.ImageInputStream</td> <td class="needsmerge"><a href="compare/javax.imageio.stream.ImageInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.naming.CompoundName</td> <td class="needsmerge"><a href="compare/javax.naming.CompoundName.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.print.AttributeException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.print.CancelablePrintJob</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -197,8 +206,62 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td>No</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td>No</td> </tr>
+<tr> <td class="needsmerge">javax.swing.AbstractButton</td> <td class="needsmerge"><a href="compare/javax.swing.AbstractButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ActionMap</td> <td class="needsmerge"><a href="compare/javax.swing.ActionMap.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DefaultButtonModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultButtonModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.DefaultListModel</td> <td class="needsmerge"><a href="compare/javax.swing.DefaultListModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ImageIcon</td> <td class="needsmerge"><a href="compare/javax.swing.ImageIcon.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JComboBox</td> <td class="needsmerge"><a href="compare/javax.swing.JComboBox.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JInternalFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JInternalFrame.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JMenuBar</td> <td class="needsmerge"><a href="compare/javax.swing.JMenuBar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JMenuItem</td> <td class="needsmerge"><a href="compare/javax.swing.JMenuItem.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JOptionPane</td> <td class="needsmerge"><a href="compare/javax.swing.JOptionPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JProgressBar</td> <td class="needsmerge"><a href="compare/javax.swing.JProgressBar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JRootPane</td> <td class="needsmerge"><a href="compare/javax.swing.JRootPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JScrollBar</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollBar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JScrollPane</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JSeparator</td> <td class="needsmerge"><a href="compare/javax.swing.JSeparator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JSlider</td> <td class="needsmerge"><a href="compare/javax.swing.JSlider.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTabbedPane</td> <td class="needsmerge"><a href="compare/javax.swing.JTabbedPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTable</td> <td class="needsmerge"><a href="compare/javax.swing.JTable.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JTextField.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JToolBar</td> <td class="needsmerge"><a href="compare/javax.swing.JToolBar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JToolTip</td> <td class="needsmerge"><a href="compare/javax.swing.JToolTip.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JTree</td> <td class="needsmerge"><a href="compare/javax.swing.JTree.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JWindow</td> <td class="needsmerge"><a href="compare/javax.swing.JWindow.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.KeyStroke</td> <td class="needsmerge"><a href="compare/javax.swing.KeyStroke.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.LookAndFeel</td> <td class="needsmerge"><a href="compare/javax.swing.LookAndFeel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.SwingUtilities</td> <td class="needsmerge"><a href="compare/javax.swing.SwingUtilities.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.Timer</td> <td class="needsmerge"><a href="compare/javax.swing.Timer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ToolTipManager</td> <td class="needsmerge"><a href="compare/javax.swing.ToolTipManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.UIDefaults</td> <td class="needsmerge"><a href="compare/javax.swing.UIDefaults.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.ViewportLayout</td> <td class="needsmerge"><a href="compare/javax.swing.ViewportLayout.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.border.TitledBorder</td> <td class="needsmerge"><a href="compare/javax.swing.border.TitledBorder.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.filechooser.FileSystemView</td> <td class="needsmerge"><a href="compare/javax.swing.filechooser.FileSystemView.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicArrowButton</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicArrowButton.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonListener</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonListener.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicCheckBoxMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicCheckBoxMenuItemUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicGraphicsUtils</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicGraphicsUtils.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicLabelUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicLabelUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicMenuItemUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicRadioButtonMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicRadioButtonMenuItemUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicRootPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicRootPaneUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollPaneUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSliderUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSliderUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTabbedPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTabbedPaneUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToggleButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToggleButtonUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.DefaultTableCellRenderer</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableCellRenderer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.JTableHeader</td> <td class="needsmerge"><a href="compare/javax.swing.table.JTableHeader.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.table.TableColumn</td> <td class="needsmerge"><a href="compare/javax.swing.table.TableColumn.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.AbstractDocument</td> <td class="needsmerge"><a href="compare/javax.swing.text.AbstractDocument.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.DefaultCaret</td> <td class="needsmerge"><a href="compare/javax.swing.text.DefaultCaret.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.text.StyledEditorKit</td> <td class="needsmerge"><a href="compare/javax.swing.text.StyledEditorKit.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.tree.DefaultTreeCellEditor</td> <td class="needsmerge"><a href="compare/javax.swing.tree.DefaultTreeCellEditor.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.ClassStuff</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilder</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.xml.parsers.DocumentBuilderFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
