Bootstrap for 3.4.0:   alpha-dec-osf4.0f   i686-pc-linux-gnu (Red Hat 7.1, glibc 2.2.2, kernel 2.4.2)   ia64-hp-hpux11.22

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -23,6 +23,13 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0f</td>
+<td>Tru64</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C, Ada, with tweak):
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01304.html">3.4.0</a>
+</tr>
+
+<tr>
 <td>alphaev6-dec-osf5.1</td>
 <td>Tru64</td>
 <td>Bootstrap (C, C++, F77):
@@ -126,11 +133,27 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.2, kernel 2.4.2</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01315.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00960.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-hp-hpux11.22</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01285.html">3.4.0</a>
 </td>
 </tr>
 
