--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -520,8 +520,8 @@ optimizer.
 
 <dt><b>March 14, 2000</b></dt>
 <dd>
-CodeSourcery, LLC is now providing nightly snapshots of
-GCC</a>, distributed as RPMs for GNU/Linux on Intel platforms, plus
+CodeSourcery, LLC is now providing nightly snapshots of GCC,
+distributed as RPMs for GNU/Linux on Intel platforms, plus
 build logs and testsuite results.  In order to allow users to more
 easily confirm whether the current snapshot of GCC fixes a particular
 bug, an online compilation web form is provided.
