Anchor names must not contain plus signs.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -11,9 +11,9 @@
 <body>
 <h1>GCC 3.4 Release Series<br />Changes, New Features, and Fixes</h1>
 
-<p><em>GCC 3.4 has <a href="#c++">many improvements in the C++ frontend</a>.
-Before reporting a bug, please make sure it's really GCC, and not your code,
-that is broken.</em></p>
+<p><em>GCC 3.4 has <a href="#cplusplus">many improvements in the C++
+frontend</a>.  Before reporting a bug, please make sure it's really GCC,
+and not your code, that is broken.</em></p>
 
 <h2>Caveats</h2>
 
@@ -277,7 +277,7 @@ that is broken.</em></p>
         markers.</li>
   </ul>
 
-<h3 id="c++">C++</h3>
+<h3 id="cplusplus">C++</h3>
 
   <ul>
     <li>G++ is now <strong>much</strong> closer to full conformance to 
