--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -442,7 +442,7 @@ int main()
 <p>might print 50 on some systems and optimization levels, and 49 on
 others.</p>
 
-<p>The is the result of <em>rounding</em>: The computer cannot
+<p>This is the result of <em>rounding</em>: The computer cannot
 represent all real numbers exactly, so it has to use
 approximations. When computing with approximation, the computer needs
 to round to the nearest representable number.</p>
